Finally fixed footer spacing issue!!! :D Edited styling and content in cart page.

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -21,7 +21,6 @@ body {
 	font-weight: bold;
 	border: 0;
 	text-align: center;
-	width: 8rem;
 }
 
 .btn-alt,
@@ -36,7 +35,6 @@ body {
 	font-weight: bold;
 	border: 0;
 	text-align: center;
-	width: 7rem;
 }
 
 btn:hover,
