--- a/css/grid.css
+++ b/css/grid.css
@@ -42,6 +42,10 @@
 		width: 50%;
 	}
 	
+	.module-l-1-4 {
+		width: 25%;
+	}
+	
 	.module-l-1-3 {
 		width: 33.33333%;
 	}
@@ -68,6 +72,10 @@
 	
 	.module-xl-3-4 {
 		width: 75%;
+	}
+	
+	.module-xl-1 {
+		widht: 100%;
 	}
 	
 }
