--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,8 @@
 .nav {
 	margin-right: auto;
 	margin-left: auto;
+	padding-left: 5rem;
+	padding-right: 5rem;
 }
 
 nav a:hover,
